adicionando dado relacionado

--- a/sequelize/views/editusers.handlebars
+++ b/sequelize/views/editusers.handlebars
@@ -16,3 +16,26 @@
         <input type="submit" value="EDITAR USUÁRIO">
     </div>
 </form>
+
+<div>
+
+    <form action="/address/create" method="POST">
+        <input type="hidden" name="UserId" value={{user.id}}>
+        <div>
+            <label for="street">street:</label>
+            <input type="text" name='street' placeholder="Digite sua rua">
+        </div>
+        <div>
+            <label for="number">Numero:</label>
+            <input type="text" name='number' placeholder="Digite o numero da sua casa">
+        </div>
+        <div>
+            <label for="city">Cidade:</label>
+            <input type="text" name='city' placeholder="Digite sua cidade">
+        </div>
+        <div>
+            <input type="submit" value="CADASTRAR">
+        </div>
+</form>
+
+</div>
