--- a/sequelize/views/listusers.handlebars
+++ b/sequelize/views/listusers.handlebars
@@ -8,6 +8,10 @@
             <p>{{this.age}}</p>
             <p>{{this.occupation}}</p>
 
+        <div>
+            <p>{{this.addresses}}</p>
+        </div>
+
             <div>
                 <a href="/users/edit-users/{{this.id}}">EDITAR</a>
                 <form  action="/users/delete-user/{{this.id}}" method="POST">
