--- a/sequelize/views/editusers.handlebars
+++ b/sequelize/views/editusers.handlebars
@@ -38,4 +38,14 @@
         </div>
 </form>
 
+<div>
+    {{#each user.Adresses}}
+        <p>{{this.id}} - {{this.street}} - {{this.number}} - {{this.city}}</p>
+        <form action="/address/delete">
+            <input type="submit" value="EXCLUIR">
+        </form>
+    {{/each}}
+</div>
+
+
 </div>
